feat: input manual lotteries